--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="status">
         <span id="turn-status"></span>
         <button id="restart-btn" onclick="restartGame()" style="display:none;">Play Again</button>
+        <button id="title-btn" onclick="returnTitle()" style="display:none;">Title Screen</button>
       </div>
       <div class="board"></div>
     </div>
